--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,20 @@ jobs:
   run-ci:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+      
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '21.6.1'
-      - name: Test
-        run: npm test      
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install      
+
+      - name: Run tests
+        run: npm test
+        env:
+          CI: true
