--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,10 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Test
-      run: go test -coverprofile=coverage.out
+    - name: Run tests
+      run: npm test
+      env:
+        CI: true
 
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
